--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,11 +43,20 @@ services:
     networks:
       cloud-network:
 
+  ncredis:
+    image: redis:latest
+    restart: always
+    command: redis-server --requirepass 
+    networks:
+      cloud-network:
+
   nc:
     image: nextcloud:latest
     restart: always
     depends_on:
       - ncdb
+      - ncredis
+      - office
     volumes:
       - nc-nextcloud:/var/www/html
       - nc-apps:/var/www/html/custom_apps
@@ -64,6 +73,8 @@ services:
       - LETSENCRYPT_HOST=lxcloud.derchef.site
       - LETSENCRYPT_EMAIL=mjindra@derchef.email
       - RESOLVE_TO_PROXY_IP=true
+      - REDIS_HOST=ncredis
+      - REDIS_HOST_PASSWORD=
     networks:
       cloud-network:
           
@@ -72,7 +83,7 @@ services:
     restart: always
     environment:
       - "domain=lxcloud\\.derchef\\.site"
-      - "username=derchef"
+      - "username="
       - "password="
       - "SLEEPFORDEBUGGER=0"
       - VIRTUAL_HOST=docs.derchef.site
@@ -88,7 +99,7 @@ services:
       - MKNOD
     networks:
       cloud-network:    
-          
+
 networks:
   cloud-network:
     driver: bridge
