--- a/mariadb-docker-compose.yml
+++ b/mariadb-docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
 
   nginx-proxy:
-    image: jwilder/nginx-proxy:0.9.1
+    image: jwilder/nginx-proxy:0.9.2
     restart: always
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
@@ -31,7 +31,7 @@ services:
       cloud-network:
 
   ncdb:
-    image: mariadb:10.5
+    image: mariadb:10.6.4
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=TODO
@@ -44,7 +44,7 @@ services:
       cloud-network:
 
   ncredis:
-    image: redis:6.0-buster
+    image: redis:6.2.5
     restart: always
     command: redis-server --requirepass TODO
     networks:
@@ -79,7 +79,7 @@ services:
       cloud-network:
               
   ncoffice:
-    image: collabora/code:6.4.9.2
+    image: collabora/code:6.4.10.9
     restart: always
     environment:
       - "domain=lxcloud\\.derchef\\.site"
