--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -2,28 +2,31 @@ version: '2.1'
 services:
 
   nginx-proxy:
-    image: nginxproxy/nginx-proxy
-    ports:
-      - "80:80"
-      - "443:443"
+    image: jwilder/nginx-proxy:latest
+    restart: always
     volumes:
+      - nginx-proxy-certs:/etc/nginx/certs:ro
+      - nginx-proxy-vhost:/etc/nginx/vhost.d
+      - /opt/docker-files/nginx-proxy/network_internal.conf:/etc/nginx/network_internal.conf
       - /opt/docker-files/nginx-proxy/uploadsize.conf:/etc/nginx/conf.d/uploadsize.conf
-      - certs:/etc/nginx/certs 
-      - vhost:/etc/nginx/vhost.d 
-      - html:/usr/share/nginx/html 
+      - /usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    ports:
+      - 80:80
+      - 443:443
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     networks:
       cloud-network:
 
-  nginx-proxy-acme:
-    image: nginxproxy/acme-companion
+  nginx-letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion:latest
+    restart: always
+    volumes:
+      - nginx-proxy-certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - nginx-proxy
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - acme:/etc/acme.sh
-    environment:
-      - DEFAULT_EMAIL=mjindra@derchef.email
     networks:
       cloud-network:
 
@@ -103,10 +106,8 @@ networks:
     driver: bridge
           
 volumes:
-  certs: 
-  vhost:
-  html:
-  acme:
+  nginx-proxy-certs:
+  nginx-proxy-vhost:
   redis:
   ncdb-data:
   nc-nextcloud:
