--- a/mariadb-docker-compose.yml
+++ b/mariadb-docker-compose.yml
@@ -3,7 +3,8 @@ services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy:latest
-    restart: always
+    restart: unless-stopped
+    mem_limit: 50M
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
       - nginx-proxy-vhost:/etc/nginx/vhost.d
@@ -21,7 +22,8 @@ services:
 
   nginx-letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion:latest
-    restart: always
+    restart: unless-stopped
+    mem_limit: 20M
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -46,6 +48,7 @@ services:
   ncredis:
     image: redis:6.2.6
     restart: always
+    mem_limit: 50M
     command: redis-server --requirepass TODO
     volumes:
       - redis:/var/lib/redis
@@ -55,10 +58,13 @@ services:
   nc:
     image: nextcloud:stable
     restart: always
+    mem_limit: 700M
     depends_on:
       - ncdb
       - ncoffice 
       - ncredis
+      - nginx-proxy
+      - nginx-letsencrypt 
     volumes:
       - nc-nextcloud:/var/www/html
       - nc-apps:/var/www/html/custom_apps
@@ -80,9 +86,10 @@ services:
     networks:
       cloud-network:
               
-  ncoffice:
-    image: collabora/code:6.4.13.1
+  collabora:
+    image: collabora/code:6.4.13.2
     restart: always
+    mem_limit: 850M
     environment:
       - "domain=lxcloud\\.derchef\\.site"
       - "username=derchef"
@@ -115,3 +122,4 @@ volumes:
   nc-apps:
   nc-config:
   nc-data:
+
