--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -32,7 +32,7 @@ services:
     networks:
       cloud-network:
 
-  ncdb:
+  nc-db:
     image: postgres:13.4
     restart: always
     mem_limit: 128M
@@ -41,11 +41,11 @@ services:
       - POSTGRES_DB=nextcloud_db
       - POSTGRES_USER=nextcloud_db_user
     volumes:
-      - ncdb-data:/var/lib/postgresql/data
+      - nc-db-data:/var/lib/postgresql/data
     networks:
       cloud-network:
 
-  ncredis:
+  nc-redis:
     image: redis:6.2.6
     restart: always
     mem_limit: 50M
@@ -60,9 +60,9 @@ services:
     restart: always
     mem_limit: 700M
     depends_on:
-      - ncdb
-      - ncoffice 
-      - ncredis
+      - nc-db
+      - nc-collabora
+      - nc-redis
       - nginx-proxy
       - nginx-letsencrypt
     volumes:
@@ -86,7 +86,7 @@ services:
     networks:
       cloud-network:
               
-  collabora:
+  nc-collabora:
     image: collabora/code:6.4.13.2
     restart: always
     mem_limit: 850M
@@ -117,7 +117,7 @@ volumes:
   nginx-proxy-certs:
   nginx-proxy-vhost:
   redis:
-  ncdb-data:
+  nc-db-data:
   nc-nextcloud:
   nc-apps:
   nc-config:
