--- a/mariadb-docker-compose.yml
+++ b/mariadb-docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.1'
 services:
 
   nginx-proxy:
-    image: nginxproxy/nginx-proxy
+    image: "nginxproxy/nginx-proxy:${NGINX_PROXY_VERSION}"
     mem_limit: 50M
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
@@ -20,7 +20,7 @@ services:
       cloud-network:
 
   nginx-letsencrypt:
-    image: nginxproxy/acme-companion
+    image: "nginxproxy/acme-companion:${NGINX_LETSENCRYPT_VERSION}"
     mem_limit: 20M
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:rw
@@ -31,31 +31,31 @@ services:
       cloud-network:
 
   nc-db:
-    image: mariadb:10.6.4
+    image: "mariadb:${MARIADB_VERSION}"
     restart: always
     mem_limit: 128M
     environment:
-      - MYSQL_ROOT_PASSWORD=TODO
-      - MYSQL_DATABASE=nextcloud_db
-      - MYSQL_USER=nextcloud_db_user
-      - MYSQL_PASSWORD=TODO
+      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
+      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
+      - "MYSQL_USER=${MYSQL_USER}"
+      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
     volumes:
       - nc-db-data:/var/lib/mysql
     networks:
       cloud-network:
 
   nc-redis:
-    image: redis:6.2.6
+    image: "redis:${REDIS_VERSION}"
     restart: always
     mem_limit: 50M
-    command: redis-server --requirepass TODO
+    command: redis-server --requirepass "${REDIS_VERSION}"
     volumes:
       - redis:/var/lib/redis
     networks:
       cloud-network:
 
   nc:
-    image: nextcloud:stable
+    image: "nextcloud:${NEXTCLOUD_VERSION}"
     restart: always
     mem_limit: 700M
     depends_on:
@@ -70,35 +70,35 @@ services:
       - nc-config:/var/www/html/config
       - nc-data:/var/www/html/data
     environment:
-      - MYSQL_DATABASE=nextcloud_db
-      - MYSQL_USER=nextcloud_db_user
-      - MYSQL_PASSWORD=TODO
+      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
+      - "MYSQL_USER=${MYSQL_USER}"
+      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
       - MYSQL_HOST=ncdb
-      - VIRTUAL_HOST=lxcloud.derchef.site
+      - "VIRTUAL_HOST=${VIRTUAL_HOST}"
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
-      - LETSENCRYPT_HOST=lxcloud.derchef.site
-      - LETSENCRYPT_EMAIL=mjindra@derchef.email
+      - "LETSENCRYPT_HOST=${LETSENCRYPT_HOST}"
+      - "LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}"
       - RESOLVE_TO_PROXY_IP=true
       - REDIS_HOST=ncredis
-      - REDIS_HOST_PASSWORD=TODO
+      - "REDIS_HOST_PASSWORD=${REDIS_PASSWORD}"
     networks:
       cloud-network:
               
   nc-collabora:
-    image: collabora/code:6.4.13.2
+    image: "collabora/code:${COLLABORA_VERSION}"
     restart: always
     mem_limit: 850M
     environment:
-      - "domain=lxcloud\\.derchef\\.site"
-      - "username=derchef"
-      - "password=TODO"
+      - "domain=${nextcloud_domain}"
+      - "username=${username}"
+      - "password=${collabora_password}"
       - "SLEEPFORDEBUGGER=0"
-      - VIRTUAL_HOST=docs.derchef.site
+      - "VIRTUAL_HOST=${collabora_domain}"
       - VIRTUAL_PORT=9980
       - VIRTUAL_PROTO=https
-      - LETSENCRYPT_HOST=docs.derchef.site
-      - LETSENCRYPT_EMAIL=mjindra@derchef.email
+      - "LETSENCRYPT_HOST=${collabora_domain}"
+      - "LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}"
       - RESOLVE_TO_PROXY_IP=true
       - NETWORK_ACCESS=internal
     expose:
