--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -47,7 +47,7 @@ services:
     image: "redis:${REDIS_VERSION}"
     restart: always
     mem_limit: 50M
-    command: redis-server --requirepass "${REDIS_VERSION}"
+    command: redis-server --requirepass "${REDIS_PASSWORD}"
     volumes:
       - redis:/var/lib/redis
     networks:
