--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -72,14 +72,14 @@ services:
       - "POSTGRES_DB=${POSTGRES_DB}"
       - "POSTGRES_USER=${POSTGRES_USER}"
       - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
-      - POSTGRES_HOST=ncdb
+      - POSTGRES_HOST=nc-db
       - "VIRTUAL_HOST=${VIRTUAL_HOST}"
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
       - "LETSENCRYPT_HOST=${LETSENCRYPT_HOST}"
       - "LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}"
       - RESOLVE_TO_PROXY_IP=true
-      - REDIS_HOST=ncredis
+      - REDIS_HOST=nc-redis
       - "REDIS_HOST_PASSWORD=${REDIS_PASSWORD}"
     networks:
       cloud-network:
