--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ LETSENCRYPT_HOST=lxcloud.derchef.site
 LETSENCRYPT_EMAIL=mjindra@derchef.email
 
 ## COLLABORA
-nextcloud_domain="lxcloud\\.derchef\\.site"
+nextcloud_domain=lxcloud\.derchef\.site
 username=derchef
 collabora_password=TODO
 collabora_domain=docs.derchef.site
