--- a/.env
+++ b/.env
@@ -8,6 +8,16 @@ REDIS_VERSION=6.2.6
 NEXTCLOUD_VERSION=stable
 COLLABORA_VERSION=6.4.14.2
 
+# memory_limits
+
+NGINX_PROXY_MEM_LIMIT="60MB"
+NGINX_LETSENCRYPT_MEM_LIMIT="30MB"
+POSTGRES_MEM_LIMIT="192MB"
+MARIADB_MEM_LIMIT="192MB"
+REDIS_MEM_LIMIT="256MB"
+NEXTCLOUD_MEM_LIMIT="1536MB"
+COLLABORA_MEM_LIMIT="2048MB"
+
 # user information
 
 ## POSTGRES
