--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   nginx-proxy:
     image: "nginxproxy/nginx-proxy:${NGINX_PROXY_VERSION}"
-    mem_limit: 50M
+    mem_limit: "${NGINX_PROXY_MEM_LIMIT}"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
       - nginx-proxy-vhost:/etc/nginx/vhost.d
@@ -21,7 +21,7 @@ services:
 
   nginx-letsencrypt:
     image: "nginxproxy/acme-companion:${NGINX_LETSENCRYPT_VERSION}"
-    mem_limit: 20M
+    mem_limit: "${NGINX_LETSENCRYPT_MEM_LIMIT}"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -33,7 +33,7 @@ services:
   nc-db:
     image: "postgres:${POSTGRES_VERSION}"
     restart: always
-    mem_limit: 128M
+    mem_limit: "${POSTGRES_MEM_LIMIT}"
     environment:
       - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
       - "POSTGRES_DB=${POSTGRES_DB}"
@@ -46,7 +46,7 @@ services:
   nc-redis:
     image: "redis:${REDIS_VERSION}"
     restart: always
-    mem_limit: 50M
+    mem_limit: "${REDIS_MEM_LIMIT}"
     command: redis-server --requirepass "${REDIS_PASSWORD}"
     volumes:
       - redis:/var/lib/redis
@@ -56,7 +56,7 @@ services:
   nc:
     image: "nextcloud:${NEXTCLOUD_VERSION}"
     restart: always
-    mem_limit: 700M
+    mem_limit: "${NEXTCLOUD_MEM_LIMIT}"
     depends_on:
       - nc-db
       - nc-collabora
@@ -87,7 +87,7 @@ services:
   nc-collabora:
     image: "collabora/code:${COLLABORA_VERSION}"
     restart: always
-    mem_limit: 850M
+    mem_limit: "${COLLABORA_MEM_LIMIT}"
     environment:
       - "domain=${nextcloud_domain}"
       - "username=${username}"
@@ -120,4 +120,3 @@ volumes:
   nc-apps:
   nc-config:
   nc-data:
-
