mem_limit in .env but works

--- a/.env
+++ b/.env
@@ -8,15 +8,17 @@ REDIS_VERSION=6.2.6
 NEXTCLOUD_VERSION=stable
 COLLABORA_VERSION=6.4.14.2
 
-# memory_limits
+# memory_limits in MB
+# example: 30 * 1024
+# ==> 30720
 
-NGINX_PROXY_MEM_LIMIT="60MB"
-NGINX_LETSENCRYPT_MEM_LIMIT="30MB"
-POSTGRES_MEM_LIMIT="192MB"
-MARIADB_MEM_LIMIT="192MB"
-REDIS_MEM_LIMIT="256MB"
-NEXTCLOUD_MEM_LIMIT="1536MB"
-COLLABORA_MEM_LIMIT="2048MB"
+NGINX_PROXY_MEM_LIMIT=61440
+NGINX_LETSENCRYPT_MEM_LIMIT=30720
+POSTGRES_MEM_LIMIT=196608
+MARIADB_MEM_LIMIT=196608
+REDIS_MEM_LIMIT=262144
+NEXTCLOUD_MEM_LIMIT=1572864
+COLLABORA_MEM_LIMIT=2097152
 
 # user information
 
