--- a/postgresql-docker-compose.yml
+++ b/postgresql-docker-compose.yml
@@ -1,9 +1,9 @@
-version: '2.1'
+version: '3'
 services:
 
   nginx-proxy:
-    image: "nginxproxy/nginx-proxy:${NGINX_PROXY_VERSION}"
-    mem_limit: "${NGINX_PROXY_MEM_LIMIT}"
+    image: "nginxproxy/nginx-proxy:$NGINX_PROXY_VERSION"
+    mem_limit: "$NGINX_PROXY_MEM_LIMIT"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
       - nginx-proxy-vhost:/etc/nginx/vhost.d
@@ -20,8 +20,8 @@ services:
       cloud-network:
 
   nginx-letsencrypt:
-    image: "nginxproxy/acme-companion:${NGINX_LETSENCRYPT_VERSION}"
-    mem_limit: "${NGINX_LETSENCRYPT_MEM_LIMIT}"
+    image: "nginxproxy/acme-companion:$NGINX_LETSENCRYPT_VERSION"
+    mem_limit: "$NGINX_LETSENCRYPT_MEM_LIMIT"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -31,32 +31,32 @@ services:
       cloud-network:
 
   nc-db:
-    image: "postgres:${POSTGRES_VERSION}"
+    image: "postgres:$POSTGRES_VERSION"
     restart: always
-    mem_limit: "${POSTGRES_MEM_LIMIT}"
+    mem_limit: "$POSTGRES_MEM_LIMIT"
     environment:
-      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
-      - "POSTGRES_DB=${POSTGRES_DB}"
-      - "POSTGRES_USER=${POSTGRES_USER}"
+      - "POSTGRES_PASSWORD=$POSTGRES_PASSWORD"
+      - "POSTGRES_DB=$POSTGRES_DB"
+      - "POSTGRES_USER=$POSTGRES_USER"
     volumes:
       - nc-db-data:/var/lib/postgresql/data
     networks:
       cloud-network:
 
   nc-redis:
-    image: "redis:${REDIS_VERSION}"
+    image: "redis:$REDIS_VERSION"
     restart: always
-    mem_limit: "${REDIS_MEM_LIMIT}"
-    command: redis-server --requirepass "${REDIS_PASSWORD}"
+    mem_limit: "$REDIS_MEM_LIMIT"
+    command: redis-server --requirepass "$REDIS_PASSWORD"
     volumes:
       - redis:/var/lib/redis
     networks:
       cloud-network:
 
   nc:
-    image: "nextcloud:${NEXTCLOUD_VERSION}"
+    image: "nextcloud:$NEXTCLOUD_VERSION"
     restart: always
-    mem_limit: "${NEXTCLOUD_MEM_LIMIT}"
+    mem_limit: "$NEXTCLOUD_MEM_LIMIT"
     depends_on:
       - nc-db
       - nc-collabora
@@ -69,35 +69,35 @@ services:
       - nc-config:/var/www/html/config
       - nc-data:/var/www/html/data
     environment:
-      - "POSTGRES_DB=${POSTGRES_DB}"
-      - "POSTGRES_USER=${POSTGRES_USER}"
-      - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
+      - "POSTGRES_DB=$POSTGRES_DB"
+      - "POSTGRES_USER=$POSTGRES_USER"
+      - "POSTGRES_PASSWORD=$POSTGRES_PASSWORD"
       - POSTGRES_HOST=nc-db
-      - "VIRTUAL_HOST=${VIRTUAL_HOST}"
+      - "VIRTUAL_HOST=$VIRTUAL_HOST"
       - VIRTUAL_PORT=80
       - VIRTUAL_PROTO=http
-      - "LETSENCRYPT_HOST=${LETSENCRYPT_HOST}"
-      - "LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}"
+      - "LETSENCRYPT_HOST=$LETSENCRYPT_HOST"
+      - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
       - RESOLVE_TO_PROXY_IP=true
       - REDIS_HOST=nc-redis
-      - "REDIS_HOST_PASSWORD=${REDIS_PASSWORD}"
+      - "REDIS_HOST_PASSWORD=$REDIS_PASSWORD"
     networks:
       cloud-network:
 
   nc-collabora:
-    image: "collabora/code:${COLLABORA_VERSION}"
+    image: "collabora/code:$COLLABORA_VERSION"
     restart: always
-    mem_limit: "${COLLABORA_MEM_LIMIT}"
+    mem_limit: "$COLLABORA_MEM_LIMIT"
     environment:
-      - "domain=${nextcloud_domain}"
-      - "username=${username}"
-      - "password=${collabora_password}"
+      - "domain=$nextcloud_domain"
+      - "username=$username"
+      - "password=$collabora_password"
       - "SLEEPFORDEBUGGER=0"
-      - "VIRTUAL_HOST=${collabora_domain}"
+      - "VIRTUAL_HOST=$collabora_domain"
       - VIRTUAL_PORT=9980
       - VIRTUAL_PROTO=https
-      - "LETSENCRYPT_HOST=${collabora_domain}"
-      - "LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}"
+      - "LETSENCRYPT_HOST=$collabora_domain"
+      - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
       - RESOLVE_TO_PROXY_IP=true
       - NETWORK_ACCESS=internal
     expose:
