docker-compose version 2.1

--- a/.env
+++ b/.env
@@ -9,16 +9,16 @@ NEXTCLOUD_VERSION=stable
 COLLABORA_VERSION=21.11.0.5.1
 
 # memory_limits in MB
-# example: 30 * 1024
+# example: 30 * 1024 * 1024
 # ==> 30720
 
-NGINX_PROXY_MEM_LIMIT=61440
-NGINX_LETSENCRYPT_MEM_LIMIT=30720
-POSTGRES_MEM_LIMIT=196608
-MARIADB_MEM_LIMIT=196608
-REDIS_MEM_LIMIT=262144
-NEXTCLOUD_MEM_LIMIT=1572864
-COLLABORA_MEM_LIMIT=2097152
+NGINX_PROXY_MEM_LIMIT=62914560
+NGINX_LETSENCRYPT_MEM_LIMIT=31457280
+POSTGRES_MEM_LIMIT=201326592
+MARIADB_MEM_LIMIT=201326592
+REDIS_MEM_LIMIT=268435456
+NEXTCLOUD_MEM_LIMIT=1610612736
+COLLABORA_MEM_LIMIT=2147483648
 
 # user information
 
