adding html server for serving website
Signed-off-by: MartinJindra <mjindra@derchef.email>

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ MARIADB_VERSION=10.7.1
 REDIS_VERSION=6.2.6
 NEXTCLOUD_VERSION=stable
 COLLABORA_VERSION=21.11.0.5.1
+HTML_VERSION=stable
 
 # memory_limits in MB
 # example: 30 * 1024 * 1024
@@ -46,3 +47,7 @@ nextcloud_domain=lxcloud\.derchef\.site
 username=derchef
 collabora_password=TODO
 collabora_domain=docs.derchef.site
+
+## HTML SERVER
+html_domain=derchef.site
+
