--- a/PostgreSQL/docker-compose.yml
+++ b/PostgreSQL/docker-compose.yml
@@ -99,7 +99,7 @@ services:
       - ./html_server/Caddyfile:/etc/caddy/Caddyfile
       - ./html_server/html:/usr/share/caddy/
     environment:
-      - "VIRTUAL_HOST="${html_domain}"
+      - "VIRTUAL_HOST=${html_domain}"
       - VIRTUAL_PORT=8080
       - "LETSENCRYPT_HOST=${html_domain}"
       - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
