--- a/PostgreSQL/docker-compose.yml
+++ b/PostgreSQL/docker-compose.yml
@@ -40,12 +40,11 @@ services:
     volumes:
       - nc-db-data:/var/lib/postgresql/data
 
-  nc-redis:
-    container_name: nc-redis
+  redis:
+    container_name: redis
     image: "redis:$REDIS_VERSION"
     restart: always
     mem_limit: "$REDIS_MEM_LIMIT"
-    command: redis-server --requirepass "$REDIS_PASSWORD"
     volumes:
       - redis:/var/lib/redis
 
@@ -57,7 +56,7 @@ services:
     depends_on:
       - nc-db
       - nc-collabora
-      - nc-redis
+      - redis
       - nginx-proxy
       - nginx-letsencrypt
     volumes:
@@ -76,8 +75,7 @@ services:
       - "LETSENCRYPT_HOST=$LETSENCRYPT_HOST"
       - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
       - RESOLVE_TO_PROXY_IP=true
-      - REDIS_HOST=nc-redis
-      - "REDIS_HOST_PASSWORD=$REDIS_PASSWORD"
+      - REDIS_HOST=redis
 
   nc-collabora:
     container_name: nc-collabora
@@ -85,7 +83,7 @@ services:
     restart: always
     depends_on:
       - nc-db
-      - nc-redis
+      - redis
       - nginx-proxy
       - nginx-letsencrypt
     mem_limit: "$COLLABORA_MEM_LIMIT"
