--- a/.env
+++ b/.env
@@ -7,44 +7,30 @@ MARIADB_VERSION=10.7.1
 REDIS_VERSION=6.2.6
 NEXTCLOUD_VERSION=stable
 COLLABORA_VERSION=21.11.1.1.1
-HTML_VERSION=stable
-
-# memory_limits in MB
-# example: 30 * 1024 * 1024
-# ==> 30720
-
-NGINX_PROXY_MEM_LIMIT=62914560
-NGINX_LETSENCRYPT_MEM_LIMIT=31457280
-POSTGRES_MEM_LIMIT=201326592
-MARIADB_MEM_LIMIT=201326592
-REDIS_MEM_LIMIT=268435456
-NEXTCLOUD_MEM_LIMIT=1610612736
-COLLABORA_MEM_LIMIT=2147483648
+CADDY_VERSION=alpine
 
 # user information
 
+## NEXTCLOUD
+NEXTCLOUD_DOMAIN=cloud.example.com
+NEXTCLOUD_EMAIL=user@example.com
+NEXTCLOUD_USER=user
+NEXTCLOUD_USER_PASSWORD=TODO
+
 ## POSTGRES
-POSTGRES_PASSWORD=TODO
-POSTGRES_DB=nextcloud_db
+POSTGRES_DATABASE=nextcloud_db
 POSTGRES_USER=nextcloud_db_user
+POSTGRES_PASSWORD=TODO
 
 ## MARIADB
-MYSQL_ROOT_PASSWORD=TODO
 MYSQL_DATABASE=nextcloud_db
 MYSQL_USER=nextcloud_db_user
 MYSQL_PASSWORD=TODO
 
-## NEXTCLOUD
-VIRTUAL_HOST=lxcloud.derchef.site
-LETSENCRYPT_HOST=lxcloud.derchef.site
-LETSENCRYPT_EMAIL=mjindra@derchef.email
-
 ## COLLABORA
-nextcloud_domain=lxcloud\.derchef\.site
-username=derchef
-collabora_password=TODO
-collabora_domain=docs.derchef.site
+ESC_NEXCLOUD_DOMAIN=cloud\.example\.com
+COLLABORA_DOMAIN=office.example.com
 
 ## HTML SERVER
-html_domain=derchef.site
+DOMAIN=example.com
 
