--- a/MariaDB/docker-compose.yml
+++ b/MariaDB/docker-compose.yml
@@ -1,10 +1,9 @@
 version: '2.1'
 services:
 
-  nginx-proxy:
-    container_name: nginx-proxy
-    image: "nginxproxy/nginx-proxy:$NGINX_PROXY_VERSION"
-    mem_limit: "$NGINX_PROXY_MEM_LIMIT"
+  proxy:
+    container_name: proxy
+    image: "nginxproxy/nginx-proxy:${NGINX_PROXY_VERSION}"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:ro
       - nginx-proxy-vhost:/etc/nginx/vhost.d
@@ -16,111 +15,106 @@ services:
       - 80:80
       - 443:443
     labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy}"
 
-  nginx-letsencrypt:
-    container_name: nginx-letsencrypt
-    image: "nginxproxy/acme-companion:$NGINX_LETSENCRYPT_VERSION"
-    mem_limit: "$NGINX_LETSENCRYPT_MEM_LIMIT"
+  letsencrypt_companion:
+    container_name: letsencrypt_companion
+    image: "nginxproxy/acme-companion:${NGINX_LETSENCRYPT_VERSION}"
     volumes:
       - nginx-proxy-certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - nginx-proxy
 
-  nc-db:
-    container_name: nc-db
-    image: "mariadb:$MARIADB_VERSION"
+  nc_db:
+    container_name: nc_db
+    image: "mariadb:${MARIADB_VERSION}"
     restart: always
-    mem_limit: "$MARIADB_MEM_LIMIT"
     environment:
-      - "MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD"
-      - "MYSQL_DATABASE=$MYSQL_DATABASE"
-      - "MYSQL_USER=$MYSQL_USER"
-      - "MYSQL_PASSWORD=$MYSQL_PASSWORD"
+      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
+      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
+      - "MYSQL_USER=${MYSQL_USER}"
+      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
     volumes:
       - nc-db-data:/var/lib/mysql
 
-  nc-redis:
-    container_name: nc-redis
-    image: "redis:$REDIS_VERSION"
+  redis:
+    container_name: redis
+    image: "redis:${REDIS_VERSION}"
     restart: always
-    mem_limit: "$REDIS_MEM_LIMIT"
-    command: redis-server --requirepass "$REDIS_PASSWORD"
     volumes:
       - redis:/var/lib/redis
 
   nc:
     container_name: nc
-    image: "nextcloud:$NEXTCLOUD_VERSION"
+    image: "nextcloud:${NEXTCLOUD_VERSION}"
     restart: always
-    mem_limit: "$NEXTCLOUD_MEM_LIMIT"
     depends_on:
-      - nc-db
-      - nc-collabora
-      - nc-redis
-      - nginx-proxy
-      - nginx-letsencrypt
+      - proxy
+      - letsencrypt_companion
+      - nc_db
+      - redis
+      - nc_collabora
     volumes:
       - nc-nextcloud:/var/www/html
       - nc-apps:/var/www/html/custom_apps
       - nc-config:/var/www/html/config
       - nc-data:/var/www/html/data
     environment:
-      - "MYSQL_DATABASE=$MYSQL_DATABASE"
-      - "MYSQL_USER=$MYSQL_USER"
-      - "MYSQL_PASSWORD=$MYSQL_PASSWORD"
-      - MYSQL_HOST=nc-db
-      - "VIRTUAL_HOST=$VIRTUAL_HOST"
-      - VIRTUAL_PORT=80
-      - VIRTUAL_PROTO=http
-      - "LETSENCRYPT_HOST=$LETSENCRYPT_HOST"
-      - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
-      - RESOLVE_TO_PROXY_IP=true
-      - REDIS_HOST=nc-redis
-      - "REDIS_HOST_PASSWORD=$REDIS_PASSWORD"
+      - "MYSQL_DATABASE=${MYSQL_DATABASE}"
+      - "MYSQL_USER=${MYSQL_USER}"
+      - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
+      - "MYSQL_HOST=nc-db"
+      - "NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_USER}"
+      - "NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_USER_PASSWORD}"
+      - "VIRTUAL_HOST=${NEXTCLOUD_DOMAIN}"
+      - "VIRTUAL_PORT=80"
+      - "VIRTUAL_PROTO=http"
+      - "LETSENCRYPT_HOST=${NEXTCLOUD_DOMAIN}"
+      - "LETSENCRYPT_EMAIL=${NEXTCLOUD_EMAIL}"
+      - "RESOLVE_TO_PROXY_IP=true"
+      - "REDIS_HOST=redis"
 
-  nc-collabora:
-    container_name: nc-collabora
-    image: "collabora/code:$COLLABORA_VERSION"
+  nc_collabora:
+    container_name: nc_collabora
+    image: "collabora/code:${COLLABORA_VERSION}"
     restart: always
     depends_on:
-      - nc-db
-      - nc-redis
-      - nginx-proxy
-      - nginx-letsencrypt
-    mem_limit: "$COLLABORA_MEM_LIMIT"
+      - nc_db
+      - redis
+      - proxy
+      - letsencrypt_companion
     environment:
-      - "domain=$nextcloud_domain"
-      - "username=$username"
-      - "password=$collabora_password"
+      - "domain=${ESC_NEXCLOUD_DOMAIN}"
+      - "username=${NEXTCLOUD_USER}"
+      - "password=${NEXTCLOUD_USER_PASSWORD}"
       - "SLEEPFORDEBUGGER=0"
-      - "VIRTUAL_HOST=$collabora_domain"
-      - VIRTUAL_PORT=9980
-      - VIRTUAL_PROTO=https
-      - "LETSENCRYPT_HOST=$collabora_domain"
-      - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
-      - RESOLVE_TO_PROXY_IP=true
-      - NETWORK_ACCESS=internal
+      - "VIRTUAL_HOST=${COLLABORA_DOMAIN}"
+      - "VIRTUAL_PORT=9980"
+      - "VIRTUAL_PROTO=https"
+      - "LETSENCRYPT_HOST=${COLLABORA_DOMAIN}"
+      - "LETSENCRYPT_EMAIL=${NEXTCLOUD_EMAIL}"
+      - "RESOLVE_TO_PROXY_IP=true"
+      - "NETWORK_ACCESS=internal"
     expose:
       - 9980
 
   html_server:
     container_name: html_server
-    image: caddy
+    image: "caddy:${CADDY_VERSION}"
     depends_on:
-      - nginx-proxy
-      - nginx-letsencrypt
+      - proxy
+      - letsencrypt_companion
     volumes:
       - ./html_server/Caddyfile:/etc/caddy/Caddyfile
       - ./html_server/html:/usr/share/caddy/
     environment:
-      - "VIRTUAL_HOST=${html_domain}"
-      - VIRTUAL_PORT=8080
-      - "LETSENCRYPT_HOST=${html_domain}"
-      - "LETSENCRYPT_EMAIL=$LETSENCRYPT_EMAIL"
+      - "VIRTUAL_HOST=${DOMAIN}"
+      - "VIRTUAL_PORT=8080"
+      - "LETSENCRYPT_HOST=${DOMAIN}"
+      - "LETSENCRYPT_EMAIL=${NEXTCLOUD_EMAIL}"
     ports:
-      - "8080:8080"
+      - 8080:8080
 
 volumes:
   nginx-proxy-certs:
