--- a/MariaDB/docker-compose.yml
+++ b/MariaDB/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - nginx-proxy-certs:/etc/nginx/certs:rw
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
-      - nginx-proxy
+      - proxy
 
   nc_db:
     container_name: nc_db
