--- a/MariaDB/docker-compose.yml
+++ b/MariaDB/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       - "MYSQL_DATABASE=${MYSQL_DATABASE}"
       - "MYSQL_USER=${MYSQL_USER}"
       - "MYSQL_PASSWORD=${MYSQL_PASSWORD}"
-      - "MYSQL_HOST=nc-db"
+      - "MYSQL_HOST=nc_db"
       - "NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_USER}"
       - "NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_USER_PASSWORD}"
       - "VIRTUAL_HOST=${NEXTCLOUD_DOMAIN}"
