--- a/PostgreSQL/docker-compose.yml
+++ b/PostgreSQL/docker-compose.yml
@@ -63,7 +63,7 @@ services:
       - "POSTGRES_DB=${POSTGRES_DATABASE}"
       - "POSTGRES_USER=${POSTGRES_USER}"
       - "POSTGRES_PASSWORD=${POSTGRES_PASSWORD}"
-      - "POSTGRES_HOST=nc-db"
+      - "POSTGRES_HOST=nc_db"
       - "NEXTCLOUD_ADMIN_USER=${NEXTCLOUD_USER}"
       - "NEXTCLOUD_ADMIN_PASSWORD=${NEXTCLOUD_USER_PASSWORD}"
       - "VIRTUAL_HOST=${NEXTCLOUD_DOMAIN}"
